--- a/container/package.json
+++ b/container/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
   }
 }
